<resources>
    <string name="app_name">信达宝驾</string>
    <string name="title_activity_login">登录</string>
    <string name="company">河北信达交通科技有限公司</string>

    <!-- Strings related to login -->
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="sign_in">登录</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_account_checked">此账号未通过审核,请联系企业管理员.</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="error_password_sure">输入的密码不一致</string>

    <!-- 菜单项-->
    <string name="bqstudy">本期学习</string>
    <string name="zzstudy">岗前培训</string>
    <string name="exam">在线考试</string>
    <string name="studylog">学习记录</string>
    <string name="carPosition">车辆位置</string>
    <string name="violation">违章查询</string>
    <string name="roadInfo">路况信息</string>
    <string name="stufile">学习文档</string>
    <string name="camera">拍照</string>
    <string name="file_take">选择照片</string>
    <string name="start_exam">开始考试</string>
    <string name="capture">获取照片</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="comMessage">通知消息</string>


    <string name="full_keyboard">全键盘</string>
    <string name="civil_keyboard">民用键盘</string>
    <string name="civil_wj_keyboard">民用武警键盘</string>
    <string name="test_number">测试车牌</string>
    <string name="clear_number">清除车牌</string>
    <string name="hide_ok_key">隐藏/显示“确定”键</string>
    <string name="popup_keyboard">弹出/隐藏键盘</string>
    <string name="sign_up">注册</string>
    <string name="user">用户信息</string>
    <string name="sign_out">退出</string>
    <string name="recharge_dialog_detail">付款详情</string>
    <string name="recharge_dialog_choose">请选择支付方式</string>
    <string name="wxpay">微信支付</string>
    <string name="wxdetail">亿万用户的选择,更快更安全</string>
    <string name="alipay">支付宝支付</string>
    <string name="recharge_dialog_need">需支付</string>
    <string name="recharge_dialog_confirm">确认付款</string>
    <string name="phone_account">手机号</string>
    <string name="prompt_password_sure">确认密码</string>
    <string name="car_code">车牌号</string>
    <string name="binder">绑定</string>
    <string name="frame_num">车架号</string>
    <string name="engin_num">发动机号</string>
    <string name="carcheck">车辆例检</string>
    <string name="carcheck_title">输入标题</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="car_add">绑定车辆</string>
    <string name="addphoto">添加照片</string>
    <string name="submit">提交</string>
    <string name="name">姓名</string>
    <string name="my_photo">头像</string>
    <string name="driver_card">驾驶证</string>
    <string name="qualification_card">资格证</string>
    <string name="weather">天气情况</string>
    <string name="weight">实际载重（吨）</string>
    <string name="start_time">启运日期</string>
    <string name="end_time">到达日期</string>
    <string name="start_position">启运地</string>
    <string name="end_positon">目的地</string>
    <string name="middle_position">中间停靠</string>
    <string name="middle_position_hint">多个地点请用“，”隔开</string>
    <string name="distance">里程（公里）</string>
    <string name="other">其他</string>
    <string name="stype">货物类型</string>
    <string name="ptype">普通货物</string>
    <string name="wtype">危险货物</string>
    <string name="xcq">行车前</string>
    <string name="xcz">行车中</string>
    <string name="xch">行车后</string>
</resources>
