<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".activity.CarCheckAddMainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow android:gravity="center">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/stype"
                    android:textAlignment="center"
                    />
                <RadioGroup
                    android:id="@+id/stype"
                    android:layout_weight="4"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/ptype"
                        android:text="@string/ptype"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/wtype"
                        android:text="@string/wtype"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                </RadioGroup>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/weather"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/weather"
                    android:layout_weight="4"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/weight"
                    android:layout_weight="4"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/start_time"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/start_time"
                    android:layout_weight="4"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/end_time"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/end_time"
                    android:layout_weight="4"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/start_position"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/start_position"
                    android:layout_weight="4"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/end_positon"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/end_positon"
                    android:layout_weight="4"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/middle_position"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/middle_position"
                    android:hint="@string/middle_position_hint"
                    android:layout_weight="4"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/distance"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/distance"
                    android:layout_weight="4"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/other"
                    android:textAlignment="center"
                    />
                <EditText
                    android:id="@+id/other"
                    android:layout_weight="4"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_bg"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
</LinearLayout>