<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserEditActivity">
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone_account"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </TableRow>
    <TableRow
        android:layout_marginTop="24dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_photo"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/driver_card"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qualification_card"
            android:textAlignment="center"
            android:textSize="20sp" />
    </TableRow>
    <TableRow>
        <ImageView
            android:id="@+id/my_photo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@android:drawable/ic_menu_add"
            />
        <ImageView
            android:id="@+id/driver_card"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@android:drawable/ic_menu_add"
            />
        <ImageView
            android:id="@+id/qualification_card"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@android:drawable/ic_menu_add"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </TableRow>
</TableLayout>