<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/recharge_dialog_detail"
            android:textColor="@color/text_normal"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/recharge_dialog_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:src="@drawable/icon_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recharge_dialog_choose"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/dialog_wechat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerInside"
            android:src="@drawable/weixin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/logo1"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/wxpay"
            android:textSize="16sp"
            />


        <ImageView
            android:id="@+id/recharge_wechat_cb"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:src="@drawable/checked"
            />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/dialog_zhifubao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/logo2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerInside"
            android:src="@drawable/ali" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/logo2"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/alipay"
            android:textSize="16sp"
            />


        <ImageView
            android:id="@+id/recharge_zhifubao_cb"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:src="@drawable/checked"
            android:visibility="gone"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center_vertical"
        android:minWidth="130dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_dialog_need" />

        <TextView
            android:id="@+id/recharge_num"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_confirm_pay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/recharge_dialog_confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>