<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.UserActivity">
    <RelativeLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/user_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/user_image"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_image"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_image"
            android:layout_below="@id/name"
            android:text="@string/app_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/btn_out"
        android:layout_marginTop="16dp"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textColor="@color/gray_light"
        ></TextView>
</LinearLayout>