<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:id="@+id/item_course"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/xcq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/btn_bg"
                android:text="@string/xcq"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/xcz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/btn_bg"
                android:text="@string/xcz"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/xch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_bg"
                android:text="@string/xch"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>